Segurity update for front